--- a/my_app/my_app/templates/eleve_machine.html
+++ b/my_app/my_app/templates/eleve_machine.html
@@ -61,28 +61,28 @@
                 <p class="centered"><a href="profile.html"><img src="{% static 'img/uknown.jpg' %}" class="img-circle" width="80"></a></p>
                 <h5 class="centered">Elève 1</h5>
                 <li class="mt">
-                    <a class="active" href="http://127.0.0.1:8889/eleve/acueil">
+                    <a class="active" href="/eleve/acueil">
                         <i class="fa fa-home"></i>
                         <span>Acueil</span>
                     </a>
                 </li>
 
                 <li class="mt">
-                    <a href="http://127.0.0.1:8889/eleve/profile">
+                    <a href="/eleve/profile">
                         <i class="fa fa-home"></i>
                         <span>Profile</span>
                     </a>
                 </li>
 
                 <li class="mt">
-                    <a href="http://127.0.0.1:8889/eleve/machine">
+                    <a href="/eleve/machine">
                         <i class="fa fa-home"></i>
                         <span>Machine</span>
                     </a>
                 </li>
 
                 <li class="mt">
-                    <a href="http://127.0.0.1:8889/eleve/mail">
+                    <a href="/eleve/mail">
                         <i class="fa fa-home"></i>
                         <span>Mail</span>
                     </a>
