--- a/my_app/my_app/templates/enseignant_mail_compose.html
+++ b/my_app/my_app/templates/enseignant_mail_compose.html
@@ -55,37 +55,37 @@
                 <p class="centered"><a href="profile.html"><img src="{% static 'img/uknown.jpg' %}" class="img-circle" width="80"></a></p>
                 <h5 class="centered">Enseigant 1</h5>
                 <li class="mt">
-                    <a  href="http://127.0.0.1:8889/enseignant/acueil">
+                    <a  href="/enseignant/acueil">
                         <i class="fa fa-home"></i>
                         <span>Acueil</span>
                     </a>
                 </li>
                 <li class="sub-menu">
-                    <a href="http://127.0.0.1:8889/enseignant/exercices">
+                    <a href="/enseignant/exercices">
                         <i class="fa fa-bar-chart-o"></i>
                         <span>Exercices</span>
                     </a>
                 </li>
                 <li class="sub-menu">
-                    <a href="http://127.0.0.1:8889/enseignant/instances">
+                    <a href="/enseignant/instances">
                         <i class="fa fa-bar-chart-o"></i>
                         <span>Instances</span>
                     </a>
                 </li>
                 <li class="sub-menu">
-                    <a href="http://127.0.0.1:8889/enseignant/images">
+                    <a href="/enseignant/images">
                         <i class="fa fa-bar-chart-o"></i>
                         <span>Images</span>
                     </a>
                 </li>
                 <li class="sub-menu">
-                    <a href="http://127.0.0.1:8889/enseignant/supervision">
+                    <a href="/enseignant/supervision">
                         <i class="fa fa-bar-chart-o"></i>
                         <span>Supervision</span>
                     </a>
                 </li>
                 <li class="sub-menu">
-                    <a class="active" href="http://127.0.0.1:8889/enseignant/mail">
+                    <a class="active" href="/enseignant/mail">
                         <i class="fa fa-cogs"></i>
                     <span>Mail</span>
                     </a>
@@ -101,12 +101,12 @@
 					<div class="col-sm-3">
 						<section class="panel">
 							<div class="panel-body">
-								<a href="http://127.0.0.1:8889/enseignant/mail_compose" class="btn btn-compose">
+								<a href="/enseignant/mail_compose" class="btn btn-compose">
 									<i class="fa fa-pencil"></i>  Composer un message
 								</a>
 								<ul class="nav nav-pills nav-stacked mail-nav">
-									<li><a href="http://127.0.0.1:8889/enseignant/mail"> <i class="fa fa-inbox"></i> Boîte de réception</a></li>
-									<li><a href="http://127.0.0.1:8889/enseignant/mail_sent"> <i class="fa fa-envelope-o"></i> Messages Envoyés</a></li>
+									<li><a href="/enseignant/mail"> <i class="fa fa-inbox"></i> Boîte de réception</a></li>
+									<li><a href="/enseignant/mail_sent"> <i class="fa fa-envelope-o"></i> Messages Envoyés</a></li>
 								</ul>
 							</div>
 						</section>
