--- a/my_app/my_app/templates/enseignant_supervision.html
+++ b/my_app/my_app/templates/enseignant_supervision.html
@@ -59,37 +59,37 @@
                 <p class="centered"><a href="#"><img src="{% static 'img/uknown.jpg' %}" class="img-circle" width="80"></a></p>
                 <h5 class="centered">Enseigant 1</h5>
                 <li class="mt">
-                    <a href="http://127.0.0.1:8889/enseignant/acueil">
+                    <a href="/enseignant/acueil">
                         <i class="fa fa-home"></i>
                         <span>Acueil</span>
                     </a>
                 </li>
                 <li class="sub-menu">
-                    <a href="http://127.0.0.1:8889/enseignant/exercices">
+                    <a href="/enseignant/exercices">
                         <i class="fa fa-bar-chart-o"></i>
                         <span>Exercices</span>
                     </a>
                 </li>
                 <li class="sub-menu">
-                    <a href="http://127.0.0.1:8889/enseignant/instances">
+                    <a href="/enseignant/instances">
                         <i class="fa fa-bar-chart-o"></i>
                         <span>Instances</span>
                     </a>
                 </li>
                 <li class="sub-menu">
-                    <a href="http://127.0.0.1:8889/enseignant/images">
+                    <a href="/enseignant/images">
                         <i class="fa fa-bar-chart-o"></i>
                         <span>Images</span>
                     </a>
                 </li>
                 <li class="sub-menu">
-                    <a class="active" href="http://127.0.0.1:8889/enseignant/supervision">
+                    <a class="active" href="/enseignant/supervision">
                         <i class="fa fa-bar-chart-o"></i>
                         <span>Supervision</span>
                     </a>
                 </li>
                 <li class="sub-menu">
-                    <a href="http://127.0.0.1:8889/enseignant/mail">
+                    <a href="/enseignant/mail">
                         <i class="fa fa-cogs"></i>
                     <span>Mail</span>
                     </a>
