--- a/my_app/my_app/templates/eleve.html
+++ b/my_app/my_app/templates/eleve.html
@@ -43,7 +43,7 @@
                 <!--logo end-->
                 <div class="top-menu">
                     <ul class="nav pull-right top-menu">
-                    <li><a class="logout" href="login.html">Logout</a></li>
+                    <li><a class="logout" href="{% url 'logout' %}">Logout</a></li>
                     </ul>
                 </div>
             </header>
