--- a/my_app/my_app/templates/eleve_mail.html
+++ b/my_app/my_app/templates/eleve_mail.html
@@ -1,146 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="utf-8">
-        <title>empCR eleve</title>
+	<head>
+		<meta charset="utf-8">
+		<title>empCR eleve</title>
 
 
 
-        {% load static %}
-        <link rel='stylesheet' href="{% static 'css/style.css' %}">
+		{% load static %}
+		<link rel='stylesheet' href="{% static 'css/style.css' %}">
 
-        <!-- Favicons -->
-        {% load static %}
-        <link href="{% static 'img/emp.jpg' %}" rel="icon">
+		<!-- Favicons -->
+		{% load static %}
+		<link href="{% static 'img/emp.jpg' %}" rel="icon">
 
-        <!-- Bootstrap core CSS -->
-        <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" />
+		<!-- Bootstrap core CSS -->
+		<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" />
 
-        <!-- Custom styles for this template -->
-        <link href= "{% static 'css/style.css'%}" rel="stylesheet">
-        <link href= "{% static 'css/style-responsive.css' %}" rel="stylesheet">
-        <link href= "{% static 'css/font-awesome.css' %}" rel="stylesheet" />
+		<!-- Custom styles for this template -->
+		<link href= "{% static 'css/style.css'%}" rel="stylesheet">
+		<link href= "{% static 'css/style-responsive.css' %}" rel="stylesheet">
+		<link href= "{% static 'css/font-awesome.css' %}" rel="stylesheet" />
 
-        <!--external css-->
-        <link href="lib/font-awesome/css/font-awesome.css" rel="stylesheet" />
-        <link rel="stylesheet" type="text/css" href="lib/gritter/css/jquery.gritter.css" />
-        <!-- Custom styles for this template -->
-        <link href="css/style.css" rel="stylesheet">
-        <link href="css/style-responsive.css" rel="stylesheet">
-        <script src="lib/chart-master/Chart.js"></script>
+		<!--external css-->
+		<link href="lib/font-awesome/css/font-awesome.css" rel="stylesheet" />
+		<link rel="stylesheet" type="text/css" href="lib/gritter/css/jquery.gritter.css" />
+		<!-- Custom styles for this template -->
+		<link href="css/style.css" rel="stylesheet">
+		<link href="css/style-responsive.css" rel="stylesheet">
+		<script src="lib/chart-master/Chart.js"></script>
 
-    </head>
+	</head>
 
-    <body>
-        <section id="container">
-        <!-- ************************************************************************************************************
-        TOP BAR CONTENT & NOTIFICATIONS
-        ************************************************************************************************************* -->
-        <!--header start-->
-            <header class="header black-bg">
-                <div class="sidebar-toggle-box">
-                    <div class="fa fa-bars tooltips" data-placement="right" ></div>
-                </div>
-                <!--logo start-->
-                <a href="index.html" class="logo"><b>EMP<span>CR</span></b></a>
-                <!--logo end-->
-            
-                <div class="top-menu">
-                    <ul class="nav pull-right top-menu">
-                    <li><a class="logout" href="login.html">Logout</a></li>
-                    </ul>
-                </div>
-            </header>
-        <!--header end-->
+	<body>
+		<section id="container">
+		<!-- ************************************************************************************************************
+		TOP BAR CONTENT & NOTIFICATIONS
+		************************************************************************************************************* -->
+		<!--header start-->
+			<header class="header black-bg">
+				<div class="sidebar-toggle-box">
+					<div class="fa fa-bars tooltips" data-placement="right" ></div>
+				</div>
+				<!--logo start-->
+				<a href="index.html" class="logo"><b>EMP<span>CR</span></b></a>
+				<!--logo end-->
+			
+				<div class="top-menu">
+					<ul class="nav pull-right top-menu">
+					<li><a class="logout" href="login.html">Logout</a></li>
+					</ul>
+				</div>
+			</header>
+		<!--header end-->
 
-        <!-- *************************************************************************************************************
-        MAIN SIDEBAR MENU
-        ************************************************************************************************************** -->
-        <!--sidebar start-->
-        <aside>
-            <div id="sidebar" class="nav-collapse ">
-                <!-- sidebar menu start-->
-                <ul class="sidebar-menu" id="nav-accordion">
-                <p class="centered"><a href="profile.html"><img src="{% static 'img/uknown.jpg' %}" class="img-circle" width="80"></a></p>
-                <h5 class="centered">Elève 1</h5>
-                <li class="mt">
-                    <a class="active" href="/eleve/acueil">
-                        <i class="fa fa-home"></i>
-                        <span>Acueil</span>
-                    </a>
-                </li>
+		<!-- *************************************************************************************************************
+		MAIN SIDEBAR MENU
+		************************************************************************************************************** -->
+		<!--sidebar start-->
+		<aside>
+			<div id="sidebar" class="nav-collapse ">
+				<!-- sidebar menu start-->
+				<ul class="sidebar-menu" id="nav-accordion">
+				<p class="centered"><a href="profile.html"><img src="{% static 'img/uknown.jpg' %}" class="img-circle" width="80"></a></p>
+				<h5 class="centered">{{ check_user.nom_elv}}</h5>
+				<li class="mt">
+					<a class="active" href="/eleve/acueil">
+						<i class="fa fa-home"></i>
+						<span>Acueil</span>
+					</a>
+				</li>
 
-                <li class="mt">
-                    <a href="/eleve/profile">
-                        <i class="fa fa-home"></i>
-                        <span>Profile</span>
-                    </a>
-                </li>
+				<li class="mt">
+					<a href="/eleve/profile">
+						<i class="fa fa-home"></i>
+						<span>Profile</span>
+					</a>
+				</li>
 
-                <li class="mt">
-                    <a href="/eleve/machine">
-                        <i class="fa fa-home"></i>
-                        <span>Machine</span>
-                    </a>
-                </li>
+				<li class="mt">
+					<a href="/eleve/machine">
+						<i class="fa fa-home"></i>
+						<span>Machine</span>
+					</a>
+				</li>
 
-                <li class="mt">
-                    <a href="/eleve/mail">
-                        <i class="fa fa-home"></i>
-                        <span>Mail</span>
-                    </a>
-                </li>
-                <!-- sidebar menu end-->
-            </div>
-        </aside>
-        <!--sidebar end-->
-        <!-- **********************************************************************************************************************************************************
-        MAIN CONTENT
-        *********************************************************************************************************************************************************** -->
-        <!--main content start-->
-        <section id="main-content">
-            <section class="wrapper">
-                <!-- page start-->
-                <div class="row mt">
-                    <div class="col-sm-3">
-                        <section class="panel">
-                            <div class="panel-body">
-                                <a href="eleve_mail_compose.html" class="btn btn-compose">
-                                    <i class="fa fa-pencil"></i>  Composer un message
-                                </a>
-                                <ul class="nav nav-pills nav-stacked mail-nav">
-                                    <li class="active"><a href="inbox.html"> <i class="fa fa-inbox"></i> Boîte de réception</a></li>
-                                    <li><a href="#"> <i class="fa fa-envelope-o"></i> Messages Envoyés</a></li>
-                                </ul>
-                            </div>
-                        </section>
-                    </div>
-                    <div class="col-sm-9">
-                    <section class="panel">
-                        <header class="panel-heading wht-bg">
-                        <h4 class="gen-case">
-                            Boîte de réception
-                            </h4>
-                        </header>
-                        <div class="panel-body minimal">
-                        <div class="mail-option">
-                            Actualiser
-                            <div class="btn-group">
-                            <a data-original-title="Refresh" data-placement="top" data-toggle="dropdown" href="#" class="btn mini tooltips">
-                                <i class=" fa fa-refresh"></i>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="table-inbox-wrap ">
-                        </div>
-                        </div>
-                    </section>
-                    </div>
-                </div>
-            </section>
-                <!-- /wrapper -->
-        </section>
-            <!--main content end-->
-    </body>
+				<li class="mt">
+					<a href="/eleve/mail">
+						<i class="fa fa-home"></i>
+						<span>Mail</span>
+					</a>
+				</li>
+				<!-- sidebar menu end-->
+			</div>
+		</aside>
+		<!--sidebar end-->
+		<!-- **********************************************************************************************************************************************************
+		MAIN CONTENT
+		*********************************************************************************************************************************************************** -->
+		<!--main content start-->
+		<section id="main-content">
+			<section class="wrapper">
+				<!-- page start-->
+				<div class="row mt">
+					<div class="col-sm-3">
+						<section class="panel">
+							<div class="panel-body">
+								<a href="eleve_mail_compose.html" class="btn btn-compose">
+									<i class="fa fa-pencil"></i>  Composer un message
+								</a>
+								<ul class="nav nav-pills nav-stacked mail-nav">
+									<li class="active"><a href="inbox.html"> <i class="fa fa-inbox"></i> Boîte de réception</a></li>
+									<li><a href="#"> <i class="fa fa-envelope-o"></i> Messages Envoyés</a></li>
+								</ul>
+							</div>
+						</section>
+					</div>
+					<div class="col-sm-9">
+					<section class="panel">
+						<header class="panel-heading wht-bg">
+						<h4 class="gen-case">
+							Boîte de réception
+							</h4>
+						</header>
+						<div class="panel-body minimal">
+						<div class="mail-option">
+							Actualiser
+							<div class="btn-group">
+							<a data-original-title="Refresh" data-placement="top" data-toggle="dropdown" href="#" class="btn mini tooltips">
+								<i class=" fa fa-refresh"></i>
+								</a>
+							</div>
+						</div>
+						<div class="table-inbox-wrap ">
+						</div>
+						</div>
+					</section>
+					</div>
+				</div>
+			</section>
+				<!-- /wrapper -->
+		</section>
+			<!--main content end-->
+	</body>
 </html>
