--- a/my_app/my_app/templates/eleve_machine.html
+++ b/my_app/my_app/templates/eleve_machine.html
@@ -45,7 +45,7 @@
 				<!--logo end-->
 				<div class="top-menu">
 					<ul class="nav pull-right top-menu">
-					<li><a class="logout" href="login.html">Logout</a></li>
+					<li><a class="logout" href="{% url 'logout' %}">Logout</a></li>
 					</ul>
 				</div>
 			</header>
@@ -61,7 +61,7 @@
 				<p class="centered"><a href="profile.html"><img src="{% static 'img/uknown.jpg' %}" class="img-circle" width="80"></a></p>
 				<h5 class="centered">{{ check_user.nom_elv}}</h5>
 				<li class="mt">
-					<a class="active" href="/eleve/acueil">
+					<a href="/eleve/acueil">
 						<i class="fa fa-home"></i>
 						<span>Acueil</span>
 					</a>
@@ -75,7 +75,7 @@
 				</li>
 
 				<li class="mt">
-					<a href="/eleve/machine">
+					<a class="active" href="/eleve/machine">
 						<i class="fa fa-home"></i>
 						<span>Machine</span>
 					</a>
