--- a/my_app/my_app/templates/eleve_mail.html
+++ b/my_app/my_app/templates/eleve_mail.html
@@ -48,7 +48,7 @@
 			
 				<div class="top-menu">
 					<ul class="nav pull-right top-menu">
-					<li><a class="logout" href="login.html">Logout</a></li>
+					<li><a class="logout" href="{% url 'logout' %}">Logout</a></li>
 					</ul>
 				</div>
 			</header>
@@ -65,7 +65,7 @@
 				<p class="centered"><a href="profile.html"><img src="{% static 'img/uknown.jpg' %}" class="img-circle" width="80"></a></p>
 				<h5 class="centered">{{ check_user.nom_elv}}</h5>
 				<li class="mt">
-					<a class="active" href="/eleve/acueil">
+					<a href="/eleve/acueil">
 						<i class="fa fa-home"></i>
 						<span>Acueil</span>
 					</a>
@@ -86,7 +86,7 @@
 				</li>
 
 				<li class="mt">
-					<a href="/eleve/mail">
+					<a class="active" href="/eleve/mail">
 						<i class="fa fa-home"></i>
 						<span>Mail</span>
 					</a>
