enseignant login fixed

--- a/my_app/my_app/templates/enseignant.html
+++ b/my_app/my_app/templates/enseignant.html
@@ -57,7 +57,7 @@
 				<!-- sidebar menu start-->
 				<ul class="sidebar-menu" id="nav-accordion">
 				<p class="centered"><a href="profile.html"><img src="{% static 'img/uknown.jpg' %}" class="img-circle" width="80"></a></p>
-				<h5 class="centered">Enseigant 1</h5>
+				<h5 class="centered">{{ check_user.nom_ens}}</h5>
 				<li class="mt">
 					<a class="active" href="/enseignant/acueil">
 						<i class="fa fa-home"></i>
