--- a/my_app/my_app/templates/eleve_mail.html
+++ b/my_app/my_app/templates/eleve_mail.html
@@ -48,7 +48,7 @@
 			
 				<div class="top-menu">
 					<ul class="nav pull-right top-menu">
-					<li><a class="logout" href="{% url 'logout' %}">Logout</a></li>
+					<li><a class="logout" href="{% url 'logout_elv' %}">Logout</a></li>
 					</ul>
 				</div>
 			</header>
