--- a/my_app/my_app/templates/enseignant.html
+++ b/my_app/my_app/templates/enseignant.html
@@ -16,7 +16,12 @@
 		<!-- Custom styles for this template -->
 		<link href= "{% static 'css/style.css'%}" rel="stylesheet">
 		<link href= "{% static 'css/style-responsive.css' %}" rel="stylesheet">
-		<link href= "{% static 'css/font-awesome.css' %}" rel="stylesheet" />
+		<link
+			rel="stylesheet"
+			href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
+			integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP"
+			crossorigin="anonymous"
+		/>
 
 		<!--external css-->
 		<link href="lib/font-awesome/css/font-awesome.css" rel="stylesheet" />
@@ -66,31 +71,31 @@
 				</li>
 				<li class="sub-menu">
 					<a href="/enseignant/exercices">
-						<i class="fa fa-bar-chart-o"></i>
+						<i class="fa fa-home"></i>
 						<span>Exercices</span>
 					</a>
 				</li>
 				<li class="sub-menu">
 					<a href="/enseignant/instances">
-						<i class="fa fa-bar-chart-o"></i>
+						<i class="fa fa-home"></i>
 						<span>Instances</span>
 					</a>
 				</li>
 				<li class="sub-menu">
 					<a href="/enseignant/images">
-						<i class="fa fa-bar-chart-o"></i>
+						<i class="fa fa-home"></i>
 						<span>Images</span>
 					</a>
 				</li>
 				<li class="sub-menu">
 					<a href="/enseignant/supervision">
-						<i class="fa fa-bar-chart-o"></i>
+						<i class="fa fa-home"></i>
 						<span>Supervision</span>
 					</a>
 				</li>
 				<li class="sub-menu">
 					<a href="/enseignant/mail">
-						<i class="fa fa-cogs"></i>
+						<i class="fa fa-home"></i>
 					<span>Mail</span>
 					</a>
 				</li>
