--- a/my_app/my_app/templates/enseignant_mail_compose.html
+++ b/my_app/my_app/templates/enseignant_mail_compose.html
@@ -16,7 +16,12 @@
 		<!-- Custom styles for this template -->
 		<link href= "{% static 'css/style.css'%}" rel="stylesheet">
 		<link href= "{% static 'css/style-responsive.css' %}" rel="stylesheet">
-		<link href= "{% static 'css/font-awesome.css' %}" rel="stylesheet" />
+		<link
+			rel="stylesheet"
+			href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
+			integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP"
+			crossorigin="anonymous"
+		/>
 
 		<!--external css-->
 		<link href="lib/font-awesome/css/font-awesome.css" rel="stylesheet" />
