--- a/my_app/my_app/templates/login.html
+++ b/my_app/my_app/templates/login.html
@@ -14,6 +14,12 @@
 
 	<!-- Bootstrap core CSS -->
 	<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" />
+	<link
+		rel="stylesheet"
+		href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
+		integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP"
+		crossorigin="anonymous"
+	/>
 
 	<!-- Custom styles for this template -->
 	<link href= "{% static 'css/style.css'%}" rel="stylesheet">
