--- a/my_app/my_app/templates/admin.html
+++ b/my_app/my_app/templates/admin.html
@@ -44,7 +44,7 @@
 				<!--logo end-->
 				<div class="top-menu">
 					<ul class="nav pull-right top-menu">
-					<li><a class="logout" href="login.html">Logout</a></li>
+					<li><a class="logout" href="{% url 'logout_admin' %}">Logout</a></li>
 					</ul>
 				</div>
 			</header>
@@ -59,7 +59,7 @@
 				<!-- sidebar menu start-->
 				<ul class="sidebar-menu" id="nav-accordion">
 				<p class="centered"><a href="profile.html"><img src="{% static 'img/uknown.jpg' %}" class="img-circle" width="80"></a></p>
-				<h5 class="centered">Elève 1</h5>
+				<h5 class="centered">{{ check_user.nom_admin}}</h5>
 				<li class="mt">
 					<a class="active" href="eleve.html">
 						<i class="fa fa-home"></i>
