--- a/my_app/my_app/templates/enseignant.html
+++ b/my_app/my_app/templates/enseignant.html
@@ -110,9 +110,10 @@
 		<section id="main-content">
 			<section class="wrapper">
 				<div class="row">
-					<div class="col-lg-9 main-chart">
+					<div class="col-lg-12 main-chart">
 						<div class="border-head">
-							<h3>Bienvenue Enseignant</h3>
+							<h2>Bienvenue {{ check_user.nom_ens}}</h2>
+							<hr>
 						</div>
 					</div>
 				</div>
