--- a/my_app/my_app/templates/admin.html
+++ b/my_app/my_app/templates/admin.html
@@ -79,7 +79,7 @@
 				<div class="row">
 					<div class="col-lg-12 main-chart">
 						<div class="border-head">
-							<h2>Bienvenue Admin</h2>
+							<h2>Bienvenue {{ check_user.nom_admin}}</h2>
 							<hr>
 						</div>
 						<div class="col-md-12">
