--- a/my_app/my_app/templates/enseignant_images.html
+++ b/my_app/my_app/templates/enseignant_images.html
@@ -16,11 +16,11 @@
 		<!-- Custom styles for this template -->
 		<link href= "{% static 'css/style.css'%}" rel="stylesheet">
 		<link href= "{% static 'css/style-responsive.css' %}" rel="stylesheet">
-		<link
-			rel="stylesheet"
-			href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
-			integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP"
-			crossorigin="anonymous"
+		<link 
+			rel="stylesheet" 
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.0/css/font-awesome.css" i
+			ntegrity="sha512-72McA95q/YhjwmWFMGe8RI3aZIMCTJWPBbV8iQY3jy1z9+bi6+jHnERuNrDPo/WGYEzzNs4WdHNyyEr/yXJ9pA==" 
+			crossorigin="anonymous" 
 		/>
 
 		<!--external css-->
