--- a/my_app/my_app/templates/enseignant_exercices.html
+++ b/my_app/my_app/templates/enseignant_exercices.html
@@ -24,13 +24,14 @@
 			crossorigin="anonymous" 
 		/>
 
-		<!--external css-->
+		<!--external css
 		<link href="lib/font-awesome/css/font-awesome.css" rel="stylesheet" />
 		<link rel="stylesheet" type="text/css" href="lib/gritter/css/jquery.gritter.css" />
-		<!-- Custom styles for this template -->
+		Custom styles for this template 
 		<link href="css/style.css" rel="stylesheet">
 		<link href="css/style-responsive.css" rel="stylesheet">
 		<script src="lib/chart-master/Chart.js"></script>
+		-->
 
 	</head>
 
@@ -131,17 +132,30 @@
 									<tbody>
 										{% for item in exercice_ress %}
 										<tr>
-											<td>{{ item.desig_ex }}</td>
+											<td id="desig" >{{ item.desig_ex }}</td>
 											<td>{{ item.descr_ex }}</td>
-											<td style="width: 200px;">
-												<button class="btn btn-success btn-xs"><i class="fa fa-check"></i></button>
-												<button class="btn btn-primary btn-xs"><i class="fa fa-pencil"></i></button>
-												<button class="btn btn-danger btn-xs"><i class="fa fa-trash-o "></i></button>
+											<td>
+												<button class="btn btn-info btn-xl" onclick="clickHandler"><i class="fa fa-plus"></i></button>											</td>
+												<script>
+													function clickHandler(){
+														console.log("test");
+														var va = document.getElementById("desig");
+														console.log(va);
+													}
+												</script>
 											</td>
 										</tr>
 										{% endfor %}
 									</tbody>
 								</table>
+							</div>
+						</div>
+						<div class="col-md-12">
+							<div class="content-panel">
+								<hr>
+								<tr>
+									<button type="button" class="btn btn-primary btn-lg btn-block">Créer un Exercice</button>
+								</tr>
 							</div>
 						</div>
 					</div>
