--- a/my_app/my_app/templates/enseignant.html
+++ b/my_app/my_app/templates/enseignant.html
@@ -117,6 +117,66 @@
 						</div>
 					</div>
 				</div>
+				<div class="container" style="margin-bottom: 40px; margin-top: 20px">
+					<div class ="row">
+						<div class="col-lg-1"></div>
+						<div class="col-lg-4 darkblue-panel pn" >
+							<br>
+							<br>
+							<br>
+							<i class="fa fa-home fa-5x"></i>
+							<br>
+							<br>
+							<a href="/enseignant/exercices">
+								<button type="button" class="btn btn-default btn-lg" style="width: 150px;">Exercices</button>
+							</a>
+						</div>	
+						<div class="col-lg-2" ></div>
+						<div class="col-lg-4 darkblue-panel pn" >
+							<br>
+							<br>
+							<br>
+							<i class="fa fa-home fa-5x"></i>
+							<br>
+							<br>
+							<a href="/enseignant/instances">
+								<button type="button" class="btn btn-default btn-lg" style="width: 150px;">Instances</button>
+							</a>
+						</div>
+						<div class="col-lg-1" ></div>
+					</div>
+				</div>
+
+				<div class="container">
+					<div class="row">
+						<div class="col-lg-1" ></div>
+						<div class="col-lg-4 darkblue-panel pn">
+							<br>
+							<br>
+							<br>
+							<i class="fa fa-home fa-5x"></i>
+							<br>
+							<br>
+							<a href="/enseignant/images">
+								<button type="button" class="btn btn-default btn-lg" style="width: 150px;">Repertoire</button>
+							</a>
+							</div>
+						<div class="col-lg-2" ></div>
+						<div class="col-lg-4 darkblue-panel pn">
+							<br>
+							<br>
+							<br>
+							<i class="fa fa-home fa-5x"></i>
+							<br>
+							<br>
+							<a href="/enseignant/mail">
+								<button type="button" class="btn btn-default btn-lg" style="width: 150px;">Mail</button>
+							</a>
+						</div>
+						<div class="col-lg-1" ></div>
+					</div>
+				</div>
+
 				<!-- /row -->
 			</section>
 		</section>
