--- a/my_app/my_app/templates/enseignant_exercices.html
+++ b/my_app/my_app/templates/enseignant_exercices.html
@@ -114,7 +114,7 @@
 				<div class="row">
 					<div class="col-lg-12 main-chart">
 						<div class="border-head">
-							<h2>Bienvenue Enseignant</h2>
+							<h2>Bienvenue {{ check_user.nom_ens}}</h2>
 							<hr>
 						</div>
 						<div class="col-md-12">
