--- a/my_app/my_app/templates/enseignant_supervision.html
+++ b/my_app/my_app/templates/enseignant_supervision.html
@@ -112,7 +112,7 @@
 				<div class="row">
 					<div class="col-lg-9 main-chart">
 						<div class="border-head">
-							<h3>Bienvenue Enseignant</h3>
+							<h3>Bienvenue {{ check_user.nom_ens}}</h3>
 						</div>
 					</div>
 				</div>
