--- a/my_app/my_app/templates/enseignant.html
+++ b/my_app/my_app/templates/enseignant.html
@@ -124,7 +124,7 @@
 							<br>
 							<br>
 							<br>
-							<i class="fa fa-home fa-5x"></i>
+							<i class="fa fa-code fa-5x"></i>
 							<br>
 							<br>
 							<a href="/enseignant/exercices">
@@ -136,7 +136,7 @@
 							<br>
 							<br>
 							<br>
-							<i class="fa fa-home fa-5x"></i>
+							<i class="fa fa-edit fa-5x"></i>
 							<br>
 							<br>
 							<a href="/enseignant/instances">
@@ -154,7 +154,7 @@
 							<br>
 							<br>
 							<br>
-							<i class="fa fa-home fa-5x"></i>
+							<i class="fa fa-folder fa-5x"></i>
 							<br>
 							<br>
 							<a href="/enseignant/images">
@@ -166,7 +166,7 @@
 							<br>
 							<br>
 							<br>
-							<i class="fa fa-home fa-5x"></i>
+							<i class="fa fa-envelope fa-5x"></i>
 							<br>
 							<br>
 							<a href="/enseignant/mail">
