--- a/my_app/my_app/templates/enseignant_supervision.html
+++ b/my_app/my_app/templates/enseignant_supervision.html
@@ -44,7 +44,7 @@
 					<div class="fa fa-bars tooltips" data-placement="right" ></div>
 				</div>
 				<!--logo start-->
-				<a href="index.html" class="logo"><b>EMP<span>CR</span></b></a>
+				<a href="" class="logo"><b>EMP<span>CR</span></b></a>
 				<!--logo end-->
 				<div class="top-menu">
 					<ul class="nav pull-right top-menu">
