--- a/my_app/my_app/templates/enseignant_exercices.html
+++ b/my_app/my_app/templates/enseignant_exercices.html
@@ -33,6 +33,128 @@
 		<script src="lib/chart-master/Chart.js"></script>
 		-->
 
+		<style>
+			body {font-family: Arial, Helvetica, sans-serif;}
+			
+			/* Full-width input fields */
+			input[type=text], input[type=password] {
+				width: 100%;
+				padding: 12px 20px;
+				margin: 8px 0;
+				display: inline-block;
+				border: 1px solid #ccc;
+				box-sizing: border-box;
+			}
+			
+			/* Set a style for all buttons */
+			button {
+				background-color: #4CAF50;
+				color: white;
+				padding: 14px 20px;
+				margin: 8px 0;
+				border: none;
+				cursor: pointer;
+				width: 100%;
+			}
+			
+			button:hover {
+				opacity: 0.8;
+			}
+			
+			/* Extra styles for the cancel button */
+			.cancelbtn {
+				width: auto;
+				padding: 10px 18px;
+				background-color: #f44336;
+			}
+			
+			/* Center the image and position the close button */
+			.imgcontainer {
+				text-align: center;
+				margin: 24px 0 12px 0;
+				position: relative;
+			}
+			
+			img.avatar {
+				width: 40%;
+				border-radius: 50%;
+			}
+			
+			.container {
+				padding: 16px;
+			}
+			
+			span.psw {
+				float: right;
+				padding-top: 16px;
+			}
+			
+			/* The Modal (background) */
+			.modal {
+				display: none; /* Hidden by default */
+				position: fixed; /* Stay in place */
+				z-index: 1; /* Sit on top */
+				left: 0;
+				top: 0;
+				width: 100%; /* Full width */
+				height: 100%; /* Full height */
+				overflow: auto; /* Enable scroll if needed */
+				background-color: rgb(0,0,0); /* Fallback color */
+				background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+				padding-top: 60px;
+			}
+			
+			/* Modal Content/Box */
+			.modal-content {
+				background-color: #fefefe;
+				margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+				border: 1px solid #888;
+				width: 80%; /* Could be more or less, depending on screen size */
+			}
+			
+			/* The Close Button (x) */
+			.close {
+				position: absolute;
+				right: 25px;
+				top: 0;
+				color: #000;
+				font-size: 35px;
+				font-weight: bold;
+			}
+			
+			.close:hover,
+			.close:focus {
+				color: red;
+				cursor: pointer;
+			}
+			
+			/* Add Zoom Animation */
+			.animate {
+				-webkit-animation: animatezoom 0.6s;
+				animation: animatezoom 0.6s
+			}
+			
+			@-webkit-keyframes animatezoom {
+				from {-webkit-transform: scale(0)} 
+				to {-webkit-transform: scale(1)}
+			}
+				
+			@keyframes animatezoom {
+				from {transform: scale(0)} 
+				to {transform: scale(1)}
+			}
+			
+			/* Change styles for span and cancel button on extra small screens */
+			@media screen and (max-width: 300px) {
+				span.psw {
+					display: block;
+					float: none;
+				}
+				.cancelbtn {
+					width: 100%;
+				}
+			}
+			</style>
 	</head>
 
 	<body>
@@ -126,6 +248,7 @@
 										<tr>
 											<th>Exercice</th>
 											<th>Description</th>
+											<th>But</th>
 											<th></th>
 										</tr>
 									</thead>
@@ -134,6 +257,7 @@
 										<tr>
 											<td id="desig" >{{ item.desig_ex }}</td>
 											<td>{{ item.descr_ex }}</td>
+											<td>{{ item.but }}</td>
 											<td>
 												<button class="btn btn-info btn-xl" onclick="clickHandler"><i class="fa fa-plus"></i></button>											</td>
 												<script>
@@ -154,7 +278,7 @@
 							<div class="content-panel">
 								<hr>
 								<tr>
-									<button type="button" class="btn btn-primary btn-lg btn-block">Créer un Exercice</button>
+									<button onclick="document.getElementById('id01').style.display='block' " class="btn btn-primary btn-lg btn-block">Créer un Exercice</button>
 								</tr>
 							</div>
 						</div>
@@ -162,6 +286,28 @@
 				</div>
 				<!-- /row -->
 			</section>
+
+
+<div id="id01" class="modal showback">
+	
+	<form method="POST"  class="post-form modal-content animate">  
+		{% csrf_token %}  
+		{{ form.as_table }}  
+		<button type="submit" class="save btn btn-default">Sauvegarder</button>  
+	</form>  
+</div>
+
+<script>
+// Get the modal
+var modal = document.getElementById('id01');
+
+// When the user clicks anywhere outside of the modal, close it
+window.onclick = function(event) {
+    if (event.target == modal) {
+        modal.style.display = "none";
+    }
+}
+</script>
 		</section>
 		<!--main content end-->
 	</body>
