--- a/my_app/my_app/templates/enseignant_exercices.html
+++ b/my_app/my_app/templates/enseignant_exercices.html
@@ -259,7 +259,9 @@
 											<td>{{ item.descr_ex }}</td>
 											<td>{{ item.but }}</td>
 											<td>
-												<button class="btn btn-info btn-xl" onclick="clickHandler(event)"><i class="fa fa-plus"></i></button>
+												<a href="{% url 'add_instance' item.id %}">
+													<button class="btn btn-info btn-xl" ><i class="fa fa-plus"></i></button>
+												</a>
 											</td>
 										</tr>
 										{% endfor %}
