--- a/my_app/my_app/templates/enseignant_mail_compose.html
+++ b/my_app/my_app/templates/enseignant_mail_compose.html
@@ -80,7 +80,7 @@
 				<li class="sub-menu">
 					<a href="/enseignant/images">
 						<i class="fa fa-bar-chart-o"></i>
-						<span>Images</span>
+						<span>Repertoire</span>
 					</a>
 				</li>
 				<li class="sub-menu">
