--- a/my_app/my_app/templates/enseignant.html
+++ b/my_app/my_app/templates/enseignant.html
@@ -71,31 +71,31 @@
 				</li>
 				<li class="sub-menu">
 					<a href="/enseignant/exercices">
-						<i class="fa fa-home"></i>
+						<i class="fa fa-code"></i>
 						<span>Exercices</span>
 					</a>
 				</li>
 				<li class="sub-menu">
 					<a href="/enseignant/instances">
-						<i class="fa fa-home"></i>
+						<i class="fa fa-edit"></i>
 						<span>Instances</span>
 					</a>
 				</li>
 				<li class="sub-menu">
 					<a href="/enseignant/images">
-						<i class="fa fa-home"></i>
-						<span>Images</span>
+						<i class="fa fa-folder"></i>
+						<span>Repertoire</span>
 					</a>
 				</li>
 				<li class="sub-menu">
 					<a href="/enseignant/supervision">
-						<i class="fa fa-home"></i>
+						<i class="fa fa-bar-chart-o"></i>
 						<span>Supervision</span>
 					</a>
 				</li>
 				<li class="sub-menu">
 					<a href="/enseignant/mail">
-						<i class="fa fa-home"></i>
+						<i class="fa fa-envelope"></i>
 					<span>Mail</span>
 					</a>
 				</li>
