--- a/my_app/my_app/templates/enseignant_images.html
+++ b/my_app/my_app/templates/enseignant_images.html
@@ -61,7 +61,7 @@
 			<div id="sidebar" class="nav-collapse ">
 				<!-- sidebar menu start-->
 				<ul class="sidebar-menu" id="nav-accordion">
-				<p class="centered"><a href="profile.html"><img src="{% static 'img/uknown.jpg' %}" class="img-circle" width="80"></a></p>
+				<p class="centered"><a href="#"><img src="{% static 'img/uknown.jpg' %}" class="img-circle" width="80"></a></p>
 				<h5 class="centered">{{ check_user.nom_ens}}</h5>
 				<li class="mt">
 					<a href="/enseignant/acueil">
@@ -71,20 +71,20 @@
 				</li>
 				<li class="sub-menu">
 					<a href="/enseignant/exercices">
-						<i class="fa fa-bar-chart-o"></i>
+						<i class="fa fa-code"></i>
 						<span>Exercices</span>
 					</a>
 				</li>
 				<li class="sub-menu">
 					<a href="/enseignant/instances">
-						<i class="fa fa-bar-chart-o"></i>
+						<i class="fa fa-edit"></i>
 						<span>Instances</span>
 					</a>
 				</li>
 				<li class="sub-menu">
 					<a class="active" href="/enseignant/images">
-						<i class="fa fa-bar-chart-o"></i>
-						<span>Images</span>
+						<i class="fa fa-folder"></i>
+						<span>Repertoire</span>
 					</a>
 				</li>
 				<li class="sub-menu">
@@ -95,7 +95,7 @@
 				</li>
 				<li class="sub-menu">
 					<a href="/enseignant/mail">
-						<i class="fa fa-cogs"></i>
+						<i class="fa fa-envelope"></i>
 					<span>Mail</span>
 					</a>
 				</li>
