--- a/my_app/my_app/templates/enseignant_supervision.html
+++ b/my_app/my_app/templates/enseignant_supervision.html
@@ -71,20 +71,20 @@
 				</li>
 				<li class="sub-menu">
 					<a href="/enseignant/exercices">
-						<i class="fa fa-bar-chart-o"></i>
+						<i class="fa fa-code"></i>
 						<span>Exercices</span>
 					</a>
 				</li>
 				<li class="sub-menu">
 					<a href="/enseignant/instances">
-						<i class="fa fa-bar-chart-o"></i>
+						<i class="fa fa-edit"></i>
 						<span>Instances</span>
 					</a>
 				</li>
 				<li class="sub-menu">
 					<a href="/enseignant/images">
-						<i class="fa fa-bar-chart-o"></i>
-						<span>Images</span>
+						<i class="fa fa-folder"></i>
+						<span>Repertoire</span>
 					</a>
 				</li>
 				<li class="sub-menu">
@@ -95,7 +95,7 @@
 				</li>
 				<li class="sub-menu">
 					<a href="/enseignant/mail">
-						<i class="fa fa-cogs"></i>
+						<i class="fa fa-envelope"></i>
 					<span>Mail</span>
 					</a>
 				</li>
